 	-> bugfix: could not save text styles over whole line
 	-> bugfix: could not delete gap tag (and any other empty tag) when selection area was starting from this tag onwards
 	
 0.7.2:
 	-> bugix: baselines were assigned to wrong parent element when splitted
 	-> new "text recognition" interface
	-> bugfix: chnage of colors from config file were not applied after restart
	-> event messages
	-> bugfixes in PDF export
	-> Loupe function
	-> parent id of saved transcription gets stored 
	
0.7.3:
	-> save transcript with commit message (save button with balloon or ctrl-c)
	-> document copy functionality via collection manager (in my-documents table on bottom right)
	-> bugfix: loupe did not work for images that were scaled internally (i.e. images with more than 15 million pixels)
	-> render control characters (whitespace, tab, end of line) into the text (1st version...)
	-> bugfix: button that determines which styles are rendered did not work properly
	-> bugfix: dropdowntoolitem with radio style items fired selection event twice
	
0.7.4:
	-> Bugfix: crash when opening and closing collection manager
	-> new admin area functionality: apply affine transformations to doc; batch replace images for remote doc
	
0.7.5:
	-> fixed severe tagging bug: characters from other alphabets not recovered on transcript reload
	-> collection manager remodelled:
		add to collection, remove from collection and duplicate document now also possible for collection owner
		removed my-docs table and merged it with the documents table
	-> rtf export replaced by docx export
	
0.7.6:
	-> fixed minor bug in remember credentials functionality: last logged in user is remembered
	-> deleting a page added
	-> proxy settings
	-> display status and user in thumbnail overview
	
0.7.7:
	-> bugfix: could not load local document any more
	
0.7.8:
	-> rotate image 90 degrees
	-> bugfix: baseline focus with angle >180 degrees were displayed upside down
	-> export bugs fixed
	
	
	



	