@@ -29,6 +29,8 @@ selectedLineWidth=5
 selectedPointRadius=5
 newDrawLineWidth=3
 newDrawColor=(128,0,0)
+drawSelectedCornerNumbers = false
+drawPolylineArcs = true
 # colors:
 colorPrintSpace=(255,0,255)
 colorTextRegions=(0,128,0)
