@@ -28,6 +28,8 @@ drawLineWidth=2
 selectedLineWidth=3
 newDrawLineWidth=3
 newDrawColor=(139,0,0)
+drawSelectedCornerNumbers = false
+drawPolylineArcs = true
 # colors:
 colorPrintSpace=(231,16,210)
 colorTextRegions=(30,230,30)
